--- a/index.html
+++ b/index.html
@@ -11,170 +11,190 @@
       rel="stylesheet"
     />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./index.html" class="header-logo link"
-          >Web<span class="header-logo-color">Studio</span></a
-        >
-        <ul class="header-menu list">
-          <li class="header-menu-item">
-            <a href="./index.html" class="header-menu-link link">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a href="./portfolio.html" class="header-menu-link link"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a href="" class="header-menu-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="header-address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="header-logo-color">Studio</span></a
+          >
+          <ul class="header-menu list">
+            <li class="header-menu-item">
+              <a href="./index.html" class="header-menu-link link">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="./portfolio.html" class="header-menu-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a href="" class="header-menu-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="header-address-list list">
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="header-address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section id="contact-us" class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-btn">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-btn">Order Service</button>
+        </div>
       </section>
 
-      <section>
-        <h2 hidden>Benefits</h2>
-        <ul class="benefits-list list">
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle section-subtitle">Strategy</h3>
-            <p class="benefits-item-text section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle section-subtitle">Punctuality</h3>
-            <p class="benefits-item-text section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle section-subtitle">Diligence</h3>
-            <p class="benefits-item-text section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-subtitle section-subtitle">Technologies</h3>
-            <p class="benefits-item-text section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="benefits">
+        <div class="container">
+          <h2 class="visually-hidden">Benefits</h2>
+          <ul class="benefits-list list">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle section-subtitle">Strategy</h3>
+              <p class="benefits-item-text section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle section-subtitle">Punctuality</h3>
+              <p class="benefits-item-text section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle section-subtitle">Diligence</h3>
+              <p class="benefits-item-text section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle section-subtitle">Technologies</h3>
+              <p class="benefits-item-text section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section id="portfolio" class="doing">
-        <h2 class="doing-title section-title">What are we doing</h2>
-        <ul class="doing-list list">
-          <li class="doing-item">
-            <img
-              src="./images/site-exapmle.jpg"
-              alt="website on monitor"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/chat.jpg"
-              alt="mobile whit open chat"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/mobile-app.jpg"
-              alt="mobile app"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="doing-title section-title">What are we doing</h2>
+          <ul class="doing-list list">
+            <li class="doing-item">
+              <img
+                src="./images/site-exapmle.jpg"
+                alt="website on monitor"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/chat.jpg"
+                alt="mobile whit open chat"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/mobile-app.jpg"
+                alt="mobile app"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section id="team" class="team">
-        <h2 class="team-title section-title">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-            <p class="team-text section-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-            <p class="team-text section-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-            <p class="team-text section-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-            <p class="team-text section-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+              <p class="team-text section-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+              <p class="team-text section-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+              <p class="team-text section-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+              <p class="team-text section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo link"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
