--- a/portfolio.html
+++ b/portfolio.html
@@ -11,192 +11,207 @@
       rel="stylesheet"
     />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./index.html" class="header-logo link"
-          >Web<span class="header-logo-color">Studio</span></a
-        >
-        <ul class="header-menu list">
-          <li class="header-menu-item">
-            <a href="./index.html" class="header-menu-link link">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a href="./portfolio.html" class="header-menu-link link"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a href="" class="header-menu-link link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-address-link link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="header-address-link link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a href="./index.html" class="header-logo link"
+            >Web<span class="header-logo-color">Studio</span></a
+          >
+          <ul class="header-menu list">
+            <li class="header-menu-item">
+              <a href="./index.html" class="header-menu-link link">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="./portfolio.html" class="header-menu-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a href="" class="header-menu-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="header-address-list list">
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                class="header-address-link link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="header-address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <h1 hidden>Portfolio menu</h1>
       <section class="products">
-        <h1 hidden>Products</h1>
-        <ul class="products-btn-list list">
-          <li><button type="button" class="products-btn">All</button></li>
-          <li>
-            <button type="button" class="products-btn">Web Site</button>
-          </li>
-          <li><button type="button" class="products-btn">App</button></li>
-          <li>
-            <button type="button" class="products-btn">Design</button>
-          </li>
-          <li>
-            <button type="button" class="products-btn">Marketing</button>
-          </li>
-        </ul>
-
-        <ul class="products-list list">
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking app interface"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">
-                Banking App Interface Concept
-              </h2>
-              <p class="products-text section-text">App</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="cashless payment on mobile"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">
-                Cashless Payment
-              </h2>
-              <p class="products-text section-text">Marketing</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="meditation app interface"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">Meditation App</h2>
-              <p class="products-text section-text">App</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/taxi.jpg"
-                alt="taxi service app on mobile"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">Taxi Service</h2>
-              <p class="products-text section-text">Marketing</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/screen-illustration.jpg"
-                alt="screen illustrations example"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">
-                Screen Illustrations
-              </h2>
-              <p class="products-text section-text">Design</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/cources.jpg"
-                alt="online cources on mobile"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">Online Courses</h2>
-              <p class="products-text section-text">Marketing</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/insta-stories.jpg"
-                alt="instagram stories example"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">
-                Instagram Stories Concept
-              </h2>
-              <p class="products-text section-text">Design</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/organic-food.jpg"
-                alt="bag with organic food"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">Organic Food</h2>
-              <p class="products-text section-text">Web Site</p>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="" class="products-link link">
-              <img
-                src="./images/fresh-coffee.jpg"
-                alt="making coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="products-subtitle section-subtitle">Fresh Coffee</h2>
-              <p class="products-text section-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
-      </section>
+        <div class="container">
+          <h1 class="visually-hidden">Products</h1>
+          <ul class="products-btn-list list">
+            <li><button type="button" class="products-btn">All</button></li>
+            <li>
+              <button type="button" class="products-btn">Web Site</button>
+            </li>
+            <li><button type="button" class="products-btn">App</button></li>
+            <li>
+              <button type="button" class="products-btn">Design</button>
+            </li>
+            <li>
+              <button type="button" class="products-btn">Marketing</button>
+            </li>
+          </ul>
+          <ul class="products-list list">
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking app interface"
+                  width="360"
+                  height="300"
+                />
+                <div class="product-description">
+                  <h2 class="products-subtitle section-subtitle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="products-text section-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="cashless payment on mobile"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">
+                  Cashless Payment
+                </h2>
+                <p class="products-text section-text">Marketing</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="meditation app interface"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">Meditation App</h2>
+                <p class="products-text section-text">App</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/taxi.jpg"
+                  alt="taxi service app on mobile"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">Taxi Service</h2>
+                <p class="products-text section-text">Marketing</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/screen-illustration.jpg"
+                  alt="screen illustrations example"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">
+                  Screen Illustrations
+                </h2>
+                <p class="products-text section-text">Design</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/cources.jpg"
+                  alt="online cources on mobile"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">Online Courses</h2>
+                <p class="products-text section-text">Marketing</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/insta-stories.jpg"
+                  alt="instagram stories example"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">
+                  Instagram Stories Concept
+                </h2>
+                <p class="products-text section-text">Design</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/organic-food.jpg"
+                  alt="bag with organic food"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">Organic Food</h2>
+                <p class="products-text section-text">Web Site</p>
+              </a>
+            </li>
+            <li class="products-item">
+              <a href="" class="products-link link">
+                <img
+                  src="./images/fresh-coffee.jpg"
+                  alt="making coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="products-subtitle section-subtitle">Fresh Coffee</h2>
+                <p class="products-text section-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+                </section>
+        </div>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo link"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
