--- a/portfolio.html
+++ b/portfolio.html
@@ -87,12 +87,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="product-description">
-                  <h2 class="products-subtitle section-subtitle">
-                    Banking App Interface Concept
-                  </h2>
-                  <p class="products-text section-text">App</p>
-                </div>
+                <h2 class="products-subtitle section-subtitle">
+                  Banking App Interface Concept
+                </h2>
+                <p class="products-text section-text">App</p>
               </a>
             </li>
             <li class="products-item">
@@ -117,7 +115,9 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">Meditation App</h2>
+                <h2 class="products-subtitle section-subtitle">
+                  Meditation App
+                </h2>
                 <p class="products-text section-text">App</p>
               </a>
             </li>
@@ -155,7 +155,9 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">Online Courses</h2>
+                <h2 class="products-subtitle section-subtitle">
+                  Online Courses
+                </h2>
                 <p class="products-text section-text">Marketing</p>
               </a>
             </li>
@@ -198,8 +200,8 @@
               </a>
             </li>
           </ul>
-                </section>
         </div>
+      </section>
     </main>
 
     <footer class="footer">
