--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <title>Web Studio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
-      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="node_modules/modern-normalize/modern-normalize.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -147,8 +144,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
-              <p class="team-text section-text">Product Designer</p>
+              <div class="team-desc">
+                <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
+                <p class="team-text section-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -157,8 +156,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
-              <p class="team-text section-text">Frontend Developer</p>
+              <div class="team-desc">
+                <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
+                <p class="team-text section-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -167,8 +168,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
-              <p class="team-text section-text">Marketing</p>
+              <div class="team-desc">
+                <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
+                <p class="team-text section-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -177,8 +180,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
-              <p class="team-text section-text">UI Designer</p>
+              <div class="team-desc">
+                <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
+                <p class="team-text section-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
