--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,10 @@
     />
     <title>Web Studio</title>
     <link
+      href="
+https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
+"
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -58,7 +60,7 @@
     </header>
 
     <main>
-      <h1 hidden>Portfolio menu</h1>
+      <h1 class="visually-hidden">Portfolio menu</h1>
       <section class="products">
         <div class="container">
           <h1 class="visually-hidden">Products</h1>
