--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     />
     <title>Web Studio</title>
     <link
+      href="
+https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css
+"
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
     />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
