--- a/portfolio.html
+++ b/portfolio.html
@@ -86,10 +86,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">
-                  Banking App Interface Concept
-                </h2>
-                <p class="products-text section-text">App</p>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="products-text section-text">App</p>
+                </div>
               </a>
             </li>
             <li class="products-item">
@@ -100,11 +102,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">
-                  Cashless Payment
-                </h2>
-                <p class="products-text section-text">Marketing</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Cashless Payment
+                  </h2>
+                  <p class="products-text section-text">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -114,11 +118,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">
-                  Meditation App
-                </h2>
-                <p class="products-text section-text">App</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Meditation App
+                  </h2>
+                  <p class="products-text section-text">App</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -128,9 +134,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">Taxi Service</h2>
-                <p class="products-text section-text">Marketing</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Taxi Service
+                  </h2>
+                  <p class="products-text section-text">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -140,11 +150,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">
-                  Screen Illustrations
-                </h2>
-                <p class="products-text section-text">Design</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Screen Illustrations
+                  </h2>
+                  <p class="products-text section-text">Design</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -154,11 +166,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">
-                  Online Courses
-                </h2>
-                <p class="products-text section-text">Marketing</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Online Courses
+                  </h2>
+                  <p class="products-text section-text">Marketing</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -168,11 +182,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">
-                  Instagram Stories Concept
-                </h2>
-                <p class="products-text section-text">Design</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="products-text section-text">Design</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -182,9 +198,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">Organic Food</h2>
-                <p class="products-text section-text">Web Site</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Organic Food
+                  </h2>
+                  <p class="products-text section-text">Web Site</p>
+                </div></a
+              >
             </li>
             <li class="products-item">
               <a href="" class="products-link link">
@@ -194,9 +214,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="products-subtitle section-subtitle">Fresh Coffee</h2>
-                <p class="products-text section-text">Web Site</p>
-              </a>
+                <div class="product-desc">
+                  <h2 class="products-subtitle section-subtitle">
+                    Fresh Coffee
+                  </h2>
+                  <p class="products-text section-text">Web Site</p>
+                </div></a
+              >
             </li>
           </ul>
         </div>
